vir-derive/tests/snapshots/high_parser__unary_expression-2.snap
---
source: vir-derive/tests/high_parser.rs
expression: program
---
program {
  sorts: []
  functions: []
  axioms: []
  procedure:
    variables:
      a: Bool
    blocks:
      [0] entry:
        guard: true
        successors: [1]
      [1] bb1:
        guard: (!a&&true)
        successors: [2]
      [2] exit:
        guard: true
        successors: []
}

